@@ -1,3 +1,6 @@
+2009-08-23 Fatih Aşıcı <fatih@pardus.org.tr>
+		* Normalize target paths of symbolic links. Fixes #10976.
+
 2009-08-22 Fatih Aşıcı <fatih@pardus.org.tr>
 		* Add optional destDir parameter to pisitools.dohtml as
 		pisitools.dodoc supports.
